2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	* arm-linux-tdep.c (arm_linux_push_arguments): Delete.
	(arm_linux_init_abi): Don't register it.

2005-08-31  Mark Kettenis  <kettenis@gnu.org>

	* symfile.c (symbol_file_command, set_initial_language)
	(symfile_bfd_open, get_section_index, add_symtab_fns)
	(find_sym_fns): Reformat code and comments.  Tweak comments.

	* m68k-tdep.c (m68k_register_name): Use ARRAY_SIZE.

2005-08-31  Jim Wilson  <wilson@specifix.com>

	* i386fbsd-tdep.c (i386fbsd_sc_reg_offset): Make it non-static.

2005-08-29  Mark Kettenis  <kettenis@gnu.org>

	* environ.c (unset_in_environ): Use strncmp instead of
	DEPRECATED_STREQN.
	* exec.c (exec_file_attach): Remove DEPRECATED_HPUX_TEXT_END.
	* language.c (set_case_command, language_enum): Use strcmp instead
	of DEPRECATED_STREQ.
	* source.c (select_source_symtab): Sprinkle a few consts.  Use
	strcmp instead of DEPRECATED_STREQ.

	* solib-svr4.c (svr4_current_sos, svr4_fetch_objfile_link_map):
	Use XZALLOC and xzalloc instead of xmalloc where appropriate.

2005-08-27  Eli Zaretskii  <eliz@gnu.org>

	* main.c (print_gdb_help): Don't advertise the (long non-existent)
	option --mapped.

2005-08-21  Mark Kettenis  <kettenis@gnu.org>

	* doublest.c (floatformat_mantissa): Use xsnprintf instead of
	sprintf.

	* vaxobsd-tdep.c: New file.
	* config/vax/obsd.mt (TDEPFILES): Add vaxobsd-tdep.o.
	* Makefile.in (vaxobsd-tdep.o): New dependency.

	* ppcobsd-tdep.c: Include "frame.h" and "frame-unwind.h".  Don't
	include "tramp-frame.h".
	(ppcobsd_sigtramp_cache_init): Remove function.
	(ppcobsd_sigtramp): Remove variable.
	(ppcobsd_page_size, ppcobsd_sigreturn_offset): New variables.
	(ppcobsd_sigtramp_p): New function.
	(ppcobsd_sigtramp_frame_cache, ppcobsd_sigtramp_frame_this_id)
	(ppcobsd_sigtramp_frame_prev_register): New functions.
	(ppcobsd_sigtramp_frame_unwind): New variable.
	(ppcobsd_sigtramp_frame_sniffer): New function.
	(ppcobsd_init_abi): Adjust to register new sigtramp sniffer